# SoundCloud_Downloader

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
docs/: ARCHITECTURE_MAP.md  CLI_REFERENCE.md  KNOWN_LIMITATIONS.md  RELEASE_CHECKLIST.md  SECURITY.md  SMOKE_TEST.md
scripts/: check.sh
tests/: test_application_policy_service.py  test_artifact_models.py  test_audio_export_models.py  test_audio_exporter.py  test_auto_refreshing_access_token_provider.py  test_checksum_utils.py  test_cli.py  test_cli_doctor.py  test_cli_download_track.py  test_cli_oauth.py  test_cli_oauth_authorize.py  test_cli_oauth_exchange_code.py  test_cli_oauth_persistent_session.py  test_cli_oauth_session.py  test_cli_oauth_token_lifecycle.py  test_cli_policy.py  test_cli_reconstruction.py  test_cli_resolver.py  test_cli_resolver_external.py  test_cli_resolver_official.py  test_cli_version_and_help.py  test_dev_import_path.py  test_domain_policy_models.py  test_download_security_regressions.py  test_e2e_download_pipeline.py  test_encrypted_oauth_session_store.py  test_encrypted_oauth_token_store.py  test_ffmpeg_runner.py  test_hls_manifest_analyzer.py  test_hls_manifest_service.py  test_hls_media_assembler.py  test_hls_media_assembly_models.py  test_hls_segment_fetcher.py  test_hls_segment_models.py  test_hls_segment_planner.py  test_hls_segment_staging_models.py  test_http_client.py  test_imports.py  test_local_artifact_storage.py  test_logging_config.py  (+34 more)
(+90 files in other folders)
