[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundcloud-downloader"
version = "0.1.0"
description = "Policy-driven SoundCloud downloader foundation."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "pydantic-settings",
  "structlog",
  "typer",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
]

[project.scripts]
soundcloud-downloader = "soundcloud_downloader.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/soundcloud_downloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
